--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<head> </head>
-
-<body>
-    <div id="app"></div>
-    <h1 id="gamePoints"></h1>
-    <button id="refresh" onclick="refresh()">Start again</button>
-</body>
-<script src="script.js" defer></script>
-
+  <body>
+    <div id="container">
+      <div id="app"></div>
+      <h1 id="gamePoints"></h1>
+      <button id="refresh" onclick="refresh()">Start again</button>
+    </div>
+  </body>
+  <script src="script.js" defer></script>
 </html>
